--- a/shop/admin/admin.html
+++ b/shop/admin/admin.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="admin.css" />
   <link rel="stylesheet" type="text/css" href="../firstPage/grid.css" />
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300i" rel="stylesheet">
   <script src="admin.js"></script>
 </head>
 
