--- a/shop/admin/admin.html
+++ b/shop/admin/admin.html
@@ -13,12 +13,12 @@
 </head>
 
 <body onload="loading()">
-  <header class="col-lg-9 col-sm-8 col-xs-12 ">
+  <header >
     <a href="../firstPage/firstPage.html">
       <div class="col-lg-6 col-sm-8 col-xs-12" id="title">Welcome to Fragrancies</div>
     </a>
   </header>
-  <div class="col-lg-9 col-sm-8 col-xs-12 " id="navBar">
+  <div id="navBar" class="">
     <a href="../firstPage/firstPage.html">
       <div class="heads">Home</div>
     </a>
@@ -34,13 +34,12 @@
       <div class="heads">Admin</div>
     </a>
   </div>
-  <div id="loading" class="col-lg-9 col-sm-8 col-xs-12 ">
-    <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/dots.gif?alt=media&token=0b85c0e6-cd0d-437b-9948-25e32fe55909" alt="">
-  </div>
-  <div id="content" class="col-lg-9 col-sm-8 col-xs-12 hidden">
+
+  <div id="content" class=" hidden">
     <div id="list">
       <div class="managing-products-container">
-        <div class="">
+        <div class="" style="
+    margin-top: 10px;">
           Gestionare produse
         </div>
         <div>
