--- a/shop/firstPage/details.html
+++ b/shop/firstPage/details.html
@@ -1,27 +1,24 @@
-<!DOCTYPE html>
-<html>
-
-<head>
+<html><head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Perfumery</title>
-  <link rel="stylesheet" type="text/css" href="details.css" />
-  <link rel="stylesheet" type="text/css" href="grid.css" />
-  <link rel="stylesheet" href="../carousel/flickity.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="details.css">
+  <link rel="stylesheet" type="text/css" href="firstPage.css">
+  <link rel="stylesheet" type="text/css" href="grid.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link href="https://fonts.googleapis.com/css?family=Dancing+Script:700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Merriweather:300i" rel="stylesheet">
   <script src="details.js"></script>
-  <script src="../carousel/flickity.pkgd.min.js"></script>
 
 </head>
 
 <body onload="loading()">
-  <header class="col-lg-9 col-sm-8 col-xs-12 ">
+  <header>
     <a href="../firstPage/firstPage.html">
       <div class="col-lg-6 col-sm-8 col-xs-12" id="title">Welcome to Fragrancies</div>
     </a>
   </header>
-  <div class="col-lg-9 col-sm-8 col-xs-12 " id="navBar">
+  <div id="navBar">
     <a href="firstPage.html">
       <div class="heads">Home</div>
     </a>
@@ -37,77 +34,115 @@
       <div class="heads">Admin</div>
     </a>
   </div>
-  <div class="hidden col-lg-9 col-sm-8 col-xs-12 " id="showAdded">Produsul a fost adaugat in cos.</div>
-  <div id="loading" class="col-lg-9 col-sm-8 col-xs-12 ">
-    <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/dots.gif?alt=media&token=0b85c0e6-cd0d-437b-9948-25e32fe55909" alt="">
+  <div class="hidden " id="showAdded">Produsul a fost adaugat in cos.</div>
+  <div id="loading" style="display: none;">
+    <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/dots.gif?alt=media&amp;token=0b85c0e6-cd0d-437b-9948-25e32fe55909" alt="">
   </div>
-  <div id="content" class="col-lg-9 col-sm-8 col-xs-12 hidden">
+  <div id="content" class="">
 
     <div id="presentationContainer">
       <div id="image" class="col-lg-6 col-sm-8 col-xs-12">
-        <img src="" alt="parfume">
+        <img src="#" alt="parfume">
       </div>
       <div id="nameBrandContainer" class="col-xs-12 col-sm-9 col-lg-6">
         <div id="name"></div>
         <div id="brand"></div>
-        <div>eau de parfum <span>pentru</span></div>
+        <div>eau de parfum <span></span></div>
         <div id="quantity"></div>
         <div id="price-order">
           <div id="price"></div>
           <div style="display:flex">
-            Cantitate <input type="number" name="quantity" min="1" value="1">
+            Cantitate <input type="number" name="quantity" min="1" value="1" max="999">
             <div id="unavailable-product" class="hidden">produs indisponibil</div>
           </div>
-          <div id="order">
-          </div>
+          <div id="order">  <button type="text" onclick="addToCart('0')">Cumpara</button></div>
         </div>
       </div>
     </div>
-    <div id="description">
-    </div>
+    <div id="description"></div>
     <div id="advertising">
       Advertising
     </div>
-    <div class="carousel" data-flickity='{ "freeScroll": true }'>
-      <div class="carousel-cell  ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/lancome-vie.jpg?alt=media&token=63479530-1a32-49c2-b73a-e712ff97a035" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/si-giorgio-armani.jpg?alt=media&token=9d4aac85-5f05-4b19-90b7-9b9265d4c317" />
-      </div>
-      <div class="carousel-cell  ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/dior.jpg?alt=media&token=057b3904-9b05-4190-9af8-7b951f578cce" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/jadore-dior.jpg?alt=media&token=206adf47-baf7-4347-b429-4c14b288d8c8" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/tom-ford.jpg?alt=media&token=50b26584-9914-4519-bfaf-15b835ddd273" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/mugler.jpg?alt=media&token=18a568f1-6566-4674-aba4-3878ab85e70c" />
-      </div>
-      <div class="carousel-cell">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/jean-paul-gaultier.jpg?alt=media&token=210785db-c4af-4c58-91c1-c09fd1f46db0" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/yves-saint-laurent.jpg?alt=media&token=7c8f7b1b-a432-4fe7-a085-d90a311ccaa2" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/light-dolce.jpg?alt=media&token=a8ef5755-3fb2-4bac-8c71-83e5344798e4" />
-      </div>
-      <div class="carousel-cell ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/tobacco-tom-ford.jpg?alt=media&token=c8c4c8eb-de71-43db-b52f-c6c5a3757f67" />
-      </div>
-      <div class="carousel-cell  ">
-        <img src="https://firebasestorage.googleapis.com/v0/b/parfumerie-99bd8.appspot.com/o/versace-dylan.jpg?alt=media&token=9c05844f-34c3-45b9-ad93-fc8320797b3b" />
-      </div>
+    <div class="w3-content w3-section" style="max-width:300px">
+
+      <img class="mySlides w3-animate-fading" src="../advertising/dior.jpg" style="width: 100%; display: block;">
+      <img class="mySlides w3-animate-fading" src="../advertising/jadore-dior.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/jean-paul-gaultier.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/lancome-vie.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/light-dolce.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/mugler.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/si-giorgio-armani.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/tom-ford.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/versace-dylan.jpg" style="width: 100%; display: none;">
+      <img class="mySlides w3-animate-fading" src="../advertising/yves-saint-laurent.jpg" style="width: 100%; display: none;">
+
 
     </div>
+<div id="footer" style="
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    background-color: #eee;
+    padding: 71px;
+">
+    <div>
+                 <h2>Contact</h2>
+
+        <div style="
+    margin-top: 10px;
+">Str. Emanoil Porumbaru 81</div>
+                <div style="
+    margin-top: 10px;
+">0777777777</div>
+         <div style="
+    margin-top: 10px;
+">mail@yahoo.com</div>
+
+    </div>
+        <div>
+    <h2>Info</h2>
+    <div style="
+    margin-top: 10px;
+">
+    About us
+    </div>
+    <div style="
+    margin-top: 10px;
+">
+    FAQ
+    </div>
+    <div style="
+    margin-top: 10px;
+">
+Delivery    </div>
+</div>
+
+
+
+
+
+</div>
+
   </div>
+  <script>
+  var myIndex = 0;
+  carousel();
+
+  function carousel() {
+    var i;
+    var x = document.getElementsByClassName("mySlides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}
+    x[myIndex-1].style.display = "block";
+    setTimeout(carousel,8000);
+  }
+  </script>
 
 
 
-</body>
 
-</html>
+
+</body></html>
